--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,1 +1,16 @@
 body{margin: 0;}
+
+input[type="text"]{
+    position: absolute;
+    z-index:100;
+    height:1rem;
+    width:50vw;
+    left:0;
+    bottom:0;
+    background-color: rgba(240, 248, 255, 0.5);
+    border:none;
+    outline: none;
+    font-size: 1rem;
+    padding: 0.5rem;
+    border-radius: 0 1rem 0 0;
+}
