--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,18 +1,21 @@
-body{margin: 0;}
+body {
+  margin: 0;
+  cursor: none;
+}
 
-.chat{
-    position: absolute;
-    z-index:100;
-    height:1rem;
-    width:50vw;
-    left:0;
-    bottom:0;
-    background-color: rgba(240, 248, 255, 0.5);
-    border:none;
-    outline: none;
-    font-size: 1rem;
-    padding: 0.5rem;
-    border-radius: 0 1rem 0 0;
+.chat {
+  position: absolute;
+  z-index: 100;
+  height: 1rem;
+  width: 50vw;
+  left: 0;
+  bottom: 0;
+  background-color: rgba(240, 248, 255, 0.5);
+  border: none;
+  outline: none;
+  font-size: 1rem;
+  padding: 0.5rem;
+  border-radius: 0 1rem 0 0;
 }
 
 form {
@@ -29,14 +32,14 @@ form {
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
-.pseudo{
+.pseudo {
   padding: 10px;
   border: 1px solid #aaa;
   border-radius: 6px;
   font-size: 1rem;
 }
 
-.connecter{
+.connecter {
   padding: 10px;
   background-color: #1976d2;
   color: white;
