--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -18,6 +18,15 @@ body {
   border-radius: 0 1rem 0 0;
 }
 
+.from-fond{
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  cursor: auto;
+}
+
 form {
   display: flex;
   flex-direction: column;
@@ -25,12 +34,18 @@ form {
   max-width: 300px;
   margin: 100px auto;
   padding: 24px;
-  border: 1px solid #ccc;
+  border: 1px solid rgba(255, 255, 255, 0.25);
   border-radius: 12px;
-  background-color: #f9f9f9;
+  background: rgba(255, 255, 255, 0.1);
   font-family: sans-serif;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  position: relative;
+  z-index: 1;
+  cursor: auto;
 }
+
 
 .pseudo {
   padding: 10px;
