--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -85,13 +85,14 @@ form > div {
   position: absolute;
   right: 14px;
   text-align: end;
-  opacity:0.5;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 700;
+  margin: 0;
 }
 
 .player-list li {
   list-style: none;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: 700;
+  
 }
 
 .player-list span{
