--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,8 @@
+@import url(https://fonts.googleapis.com/css2?family=Dongle&family=DynaPuff:wght@400..700&display=swap);
+
+#root {
+  font-family: Dongle;
+}
 body {
   margin: 0;
   cursor: none;
@@ -18,7 +23,7 @@ body {
   border-radius: 0 1rem 0 0;
 }
 
-.from-fond{
+.from-fond {
   width: 100vw;
   height: 100vh;
   position: absolute;
@@ -37,7 +42,6 @@ form {
   border: 1px solid rgba(255, 255, 255, 0.25);
   border-radius: 12px;
   background: rgba(255, 255, 255, 0.1);
-  font-family: sans-serif;
   box-shadow: 0 8px 32px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
@@ -45,7 +49,6 @@ form {
   z-index: 1;
   cursor: auto;
 }
-
 
 .pseudo {
   padding: 10px;
@@ -60,7 +63,7 @@ form {
   color: white;
   border: none;
   border-radius: 6px;
-  font-size: 1rem;
+  font-size: 0.7rem;
   cursor: pointer;
   transition: background-color 0.2s;
 }
@@ -81,19 +84,35 @@ form > div {
   color: #555;
 }
 
-.player-list{
+.player-list {
+  font-size: 1.2rem;
   position: absolute;
   right: 14px;
   text-align: end;
-  opacity:0.8;
+  opacity: 0.8;
 }
 
 .player-list li {
   list-style: none;
-  font-family: Arial, Helvetica, sans-serif;
   font-weight: 700;
 }
 
-.player-list span{
+.player-list h1 {
+  margin: 0;
+}
+
+.player-list span {
   font-weight: 900;
+}
+
+
+.gameTitle{
+  text-align: center;
+  position:absolute;
+  width:100%;
+  font-size: 50px;
+}
+
+.canvasMouse{
+  transition: background-size 0.7s cubic-bezier(.80,-0.50,.30,1.40)
 }
