--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -52,7 +52,6 @@ form {
   cursor: auto;
 }
 
-
 h1 {
   margin: 0;
 }
@@ -79,9 +78,8 @@ h1 {
   background-color: #1565c0;
 }
 
-
-p{
-  font-size:1.5rem;
+p {
+  font-size: 1.5rem;
   line-height: 70%;
 }
 
@@ -110,30 +108,46 @@ form > div {
   font-weight: 700;
 }
 
-
 .player-list span {
   font-weight: 900;
 }
 
-
-.gameTitle{
+.gameTitle {
   text-align: center;
-  position:absolute;
-  width:100%;
+  position: absolute;
+  width: 100%;
   font-size: 50px;
 }
 
-.gameTimer{
-  top:0;
-  position:absolute;
-  width:100vw;
-  margin:0
+.gameTimer {
+  top: 0;
+  position: absolute;
+  width: 100vw;
+  margin: 0;
 }
 
-.gameTimer rect{
-  transition: width 1s steps(5, jump-start), fill 1s ;
+.gameTimer rect {
+  transition: width 1s steps(5, jump-start), fill 1s;
 }
 
-.canvasMouse{
-  transition: background-size 0.7s cubic-bezier(.80,-0.50,.30,1.40)
+.canvasMouse {
+  transition: background-size 0.7s cubic-bezier(0.8, -0.5, 0.3, 1.4);
 }
+
+@keyframes spin {
+  0% {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+  100% {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
+}
+
+.rideau{
+  animation: spin 200s linear infinite
+}
+
+.rideauCircle{
+  transition: r 0.7s cubic-bezier(0.8, -0.5, 0.3, 1.4);
+}
+
