--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -130,8 +130,29 @@ form > div {
   transition: width 1s steps(5, jump-start), fill 1s;
 }
 
-.canvasMouse {
-  transition: background-size 0.7s cubic-bezier(0.8, -0.5, 0.3, 1.4);
+canvas {
+  transition: transform 1s,
+    background-size 0.7s cubic-bezier(0.8, -0.5, 0.3, 1.4);
+}
+
+.gameCanvas {
+  position:absolute;
+  width: 100vw;
+  height: 100vh;
+  transition: opacity 0.5s ease, transform 0.5s ease;
+  transition-delay: 0.3s;
+}
+
+.gameCanvas.visible{
+  transform-origin: 50% 50%;
+  opacity: 1;
+  transform: scale(1)
+}
+
+.gameCanvas.notvisible{
+  transform-origin:50% 50%;
+  opacity: 0;
+  transform: scale(0)
 }
 
 @keyframes spin {
@@ -143,11 +164,10 @@ form > div {
   }
 }
 
-.rideau{
-  animation: spin 200s linear infinite
+.rideau {
+  animation: spin 200s linear infinite;
 }
 
-.rideauCircle{
+.rideauCircle {
   transition: r 0.7s cubic-bezier(0.8, -0.5, 0.3, 1.4);
 }
-
