--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -30,8 +30,8 @@ body {
   top: 0;
   left: 0;
   cursor: auto;
-  backdrop-filter: blur(3px);
-  -webkit-backdrop-filter: blur(3px);
+  /* backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px); */
 }
 
 form {
