--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -145,19 +145,17 @@ canvas {
   position:absolute;
   width: 100vw;
   height: 100vh;
-  transition: opacity 0.5s ease, transform 0.5s ease;
+  transition: transform 0.5s ease;
   transition-delay: 0.3s;
 }
 
 .gameCanvas.visible{
   transform-origin: 50% 50%;
-  opacity: 1;
   transform: scale(1)
 }
 
 .gameCanvas.notvisible{
   transform-origin:50% 50%;
-  opacity: 0;
   transform: scale(0)
 }
 
