--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -8,6 +8,13 @@ body {
   cursor: none;
 }
 
+* {
+  user-select: none;
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none;    /* Firefox */
+  -ms-user-select: none;     /* IE/Edge */
+}
+
 .chat {
   position: absolute;
   z-index: 100;
