--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -132,6 +132,14 @@ form > div {
   font-size: 50px;
 }
 
+.gameSubTitle {
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  top:40px;
+  font-size: 25px;
+}
+
 .gameTimer {
   top: 0;
   position: absolute;
